Fix for column spacing

--- a/src/assets/styles/sections/index/_team.scss
+++ b/src/assets/styles/sections/index/_team.scss
@@ -23,7 +23,7 @@
   margin-top: 10px;
 }
 .team__members {
-  @include isFlex(flex-start);
+  @include isFlex(flex-start, start);
 }
 .team__members {
   margin-top: 80px;
